--- a/README
+++ b/README
@@ -40,8 +40,10 @@ DB_USER=your_db_user
 DB_PASSWORD=your_db_password
 DB_HOST=localhost
 DB_PORT=5432
+API_KEY = "your_api_key"
 ```
-Примечание: Убедитесь, что у вас есть установленный PostgreSQL и создана база данных с указанным в .env именем.
+Убедитесь, что у вас есть установленный PostgreSQL и создана база данных с указанным в .env именем.
+API ключ нужно получить на сайте https://www.weatherapi.com/
 
 5. Примените миграции базы данных:
 
